--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
         entitled to protection by society and the State.
     </li>
 </ol>
-<a href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf"><h2>Articles 17 to 30</h2></a>
+<h2>
+    <a href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf">Articles 17 to 30</a>
+</h2>
 </body>
 </html>
