--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         intending spouses.
     </li>
     <li>
-        Thamily is the natural and fundamental group unit of society and is
+        The family is the natural and fundamental group unit of society and is
         entitled to protection by society and the State.
     </li>
 </ol>
